--- a/Prototype1/Prototype1/Prototype1/Prototype1.csproj
+++ b/Prototype1/Prototype1/Prototype1/Prototype1.csproj
@@ -86,7 +86,9 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameObject.cs" />
+    <Compile Include="PlayerObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="TargetObject.cs" />
     <None Include="Properties\AppManifest.xml">
       <XnaPlatformSpecific>true</XnaPlatformSpecific>
     </None>
