Added level loading. Now trying to create obstacles.

--- a/Prototype1/Prototype1/Prototype1/Prototype1.csproj
+++ b/Prototype1/Prototype1/Prototype1/Prototype1.csproj
@@ -88,6 +88,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="GameObject.cs" />
+    <Compile Include="ObstacleObject.cs" />
     <Compile Include="PlayerObject.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="TargetObject.cs" />
